hero cta align center fix

--- a/assets/sass/components/_hero.sass
+++ b/assets/sass/components/_hero.sass
@@ -85,6 +85,8 @@
         &-center 
             .hero-content
                 text-align: center
+            .cta
+                display: inline-flex
         &-end 
             .row
                 flex-direction: row-reverse
